completed frontend foundations

--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "starbase",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
-    "element-ui": "^2.15.6",
+    "apollo-boost": "^0.4.9",
+    "buefy": "^0.9.13",
+    "graphql": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "normalize.css": "^8.0.1",
     "sass": "^1.43.4",
-    "sass-loader": "^12.3.0",
+    "sass-loader": "^10",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.14",
+    "vue-apollo": "^3.1.0",
+    "vue-cookies": "^1.7.4",
+    "vue-cookies-reactive": "^2.1.1",
     "vue-loader": "^15.9.8",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.14",
